# gnomepy-research

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: research-hint.md  research-new.md  research.md
gnomepy_research/: __init__.py  presets.py
gnomepy_research/reporting/: __init__.py
gnomepy_research/reporting/backtest/: __init__.py  adverse_selection.py  market_making.py  metrics.py  plots.py  report.py
gnomepy_research/sessions/bayesian_queue_depletion/: session.json  spec.yaml  strategy.py
gnomepy_research/sessions/bayesian_queue_depletion/configs/: iter_001.yaml  iter_002.yaml  iter_002_lat0.5x.yaml  iter_002_lat2x.yaml  iter_003.yaml  iter_004.yaml  iter_005.yaml  iter_006.yaml  iter_008.yaml  iter_009.yaml  sweep_007.yaml
gnomepy_research/sessions/hyperliquid_btc_mm/: session.json  spec.yaml  strategy.py
gnomepy_research/sessions/hyperliquid_btc_mm/configs/: iter_001.yaml  iter_006.yaml  iter_008.yaml  iter_009.yaml  iter_010.yaml  iter_013.yaml  sweep_014.yaml
gnomepy_research/sessions/n_exchange_arb/: hints.md  session.json  spec.yaml  strategy.py
gnomepy_research/sessions/n_exchange_arb/configs/: iter_001.yaml  iter_006.yaml  iter_007.yaml  iter_008.yaml  iter_009.yaml  iter_011.yaml  (+13 more)
gnomepy_research/sessions/queue_depletion_taker/: session.json  spec.yaml  strategy.py
gnomepy_research/sessions/stablecoin_stat_arb/: hints.md  session.json  spec.yaml  strategy.py
gnomepy_research/signals/: __init__.py  base.py
gnomepy_research/signals/fair_value/: __init__.py  base.py  microprice.py  mid.py
gnomepy_research/signals/flow/: __init__.py  aggression.py  base.py  impact.py  level_staleness.py  liquidity_delta.py  reversion.py  trade_arrival_time.py  trade_imbalance.py
gnomepy_research/signals/operations/: __init__.py  autocorrelation.py  base.py  composite.py  ewma.py  kalman.py  pct_change.py  per_asset.py  skew.py  std.py  unary.py  weight.py
gnomepy_research/signals/volatility/: __init__.py  base.py  spread.py
gnomepy_research/strategies/: __init__.py  cross_exchange_arb.py  market_maker.py  momentum.py
gnomepy_research/templates/: spec_template.yaml
notebooks/: backtest.ipynb  run_backtest.ipynb
presets/: arb_btc_30m.yaml  mm_btc_30m.yaml  momentum_btc_30m.yaml
tests/reporting/: test_metrics.py
(+1277 files in other folders)
